fix: change z index to position header over. refactor: changes on secction project to upgrade visibility. Change Skills component to map skills.js feat: create skills.js file to add skills. Add shiny effect on skills icons

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,7 +72,7 @@ button, a {
 
 /* sections */
 section#Projects, section#Contact, section#About, section#Skills {
-  @apply flex flex-col justify-center h-screen w-full max-w-11/12 sm:max-w-9/12;
+  @apply flex flex-col justify-center h-screen w-full max-w-11/12 xl:max-w-9/12;
 }
 
 h2 {
@@ -95,19 +95,6 @@ nav ul li a {
 /* social links */
 .social-btn {
   @apply text-primary hover:text-background transition-colors border border-primary hover:bg-primary active:scale-95 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 mt-5;
-}
-
-/* contenedores de tecnologías y habilidades */
-.tech-container {
-  @apply flex justify-center items-center flex-wrap gap-6 bg-input rounded-lg relative min-h-45;
-}
-
-.tech-container h3 {
-  @apply absolute top-6;
-}
-
-.tech-container img {
-  @apply size-12 hover:scale-110 hover:drop-shadow-md hover:drop-shadow-secondary/50 transition-transform cursor-crosshair;
 }
 
 /* entradas para el formulario */
